# statica-trace

./: .gitignore  Makefile  README.md  agents.md  backlog.md  conftest.py  pyproject.toml  statica_trace_dev.db
.github/workflows/: ci.yml
DOCS/: agent-replay-debugger-spec.md  deployment-guide.md  design-system-doc.md  local-testing-guide.md
agentreplay/: __init__.py  anthropic_wrapper.py  buffer.py  client.py  langchain.py  openai_wrapper.py  otel_exporter.py  schema.py
backend/: __init__.py  auth.py  database.py  main.py  models.py  replay_engine.py  schemas.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: frontend_polish.spec.ts  onboarding.spec.ts  replay_panel.spec.ts  smoke.spec.ts  trace_navigation.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: Button.test.tsx  ReplayPanel.test.tsx  TraceDetail.test.tsx  TraceList.test.tsx  api.test.ts  diff.test.ts  spanTree.test.ts
frontend/src/components/: Button.tsx  Onboarding.tsx  ReplayPanel.tsx  Settings.tsx  Sidebar.tsx  TraceDetail.tsx  TraceList.tsx
frontend/src/test/: setup.ts
frontend/src/utils/: api.ts  diff.ts  spanTree.ts
scripts/: send_test_trace.py
tests/: __init__.py  test_schema.py  test_tooling_smoke.py
tests/backend/: __init__.py  conftest.py  test_auth.py  test_ingest.py  test_replay.py  test_traces.py
tests/sdk/: test_anthropic_wrapper.py  test_buffer.py  test_client.py  test_langchain.py  test_openai_wrapper.py  test_otel_exporter.py
